rename to sugar-document

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,9 @@ python:
 
 install:
   - pip install coverage codecov
-  - source .venv-activate
 
 script:
-  - coverage run --source "${MODULE}" --module "unittest" discover --verbose "test"
+  - coverage run --source "sugar_document" --module "unittest" discover --verbose "test"
   - coverage report
 
 after_success:
